feat(admin): add game spectating and termination for admins
- Add spectate button and styling for admin game observation
- Implement admin endpoints to list active games and terminate them
- Add spectator mode with separate game state updates
- Include i18n translations for new admin game management features

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -104,6 +104,17 @@
   "chat_placeholder_muted": "Chat muted by administrator",
   "info_you_are_muted": "Your chat has been muted by an administrator.",
   "info_mute_lifted": "Chat restrictions have been lifted.",
+  "error_game_not_found": "Game with ID \"{{text}}\" not found.",
+  "error_already_in_game_as_player": "You are already a player in this game.",
+  "log_admin_spectating": "Administrator {{adminName}} started spectating the game.",
+  "spectate_game_button": "Spectate",
+  "spectator_mode_status": "Spectator Mode",
+  "game_over_terminated_by_admin": "The game was terminated by an administrator. Reason: {{reason}}",
+  "admin_termination_no_reason": "reason not specified",
+  "log_game_terminated_by_admin_event": "Administrator {{admin}} forcibly ended the game. Reason: {{reason}}",
+  "log_game_terminated_by_admin_default": "Game terminated by administrator {{admin}}.",
+  "log_game_terminated_by_admin_with_reason": "Game terminated by administrator {{admin}}. Reason: {{reason}}",
+  "text_administrator": "Administrator",
 
   "ach_first_game_name": "Rookie",
   "ach_first_game_desc": "Complete your first game.",
