--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -104,6 +104,17 @@
   "chat_placeholder_muted": "Чат приглушено адміністратором",
   "info_you_are_muted": "Ваш чат було приглушено адміністратором.",
   "info_mute_lifted": "Обмеження чату знято.",
+  "error_game_not_found": "Гру з ID \"{{text}}\" не знайдено.",
+  "error_already_in_game_as_player": "Ви вже є гравцем у цій грі.",
+  "log_admin_spectating": "Адміністратор {{adminName}} почав спостерігати за грою.",
+  "spectate_game_button": "Спостерігати",
+  "spectator_mode_status": "Режим спостерігача",
+  "game_over_terminated_by_admin": "Гру було завершено адміністратором. Причина: {{reason}}",
+  "admin_termination_no_reason": "причина не вказана",
+  "log_game_terminated_by_admin_event": "Адміністратор {{admin}} примусово завершив гру. Причина: {{reason}}",
+  "log_game_terminated_by_admin_default": "Гра завершена адміністратором {{admin}}.",
+  "log_game_terminated_by_admin_with_reason": "Гра завершена адміністратором {{admin}}. Причина: {{reason}}",
+  "text_administrator": "Адміністратор",
 
   "ach_first_game_name": "Новачок",
   "ach_first_game_desc": "Зіграти свою першу гру до кінця.",
