feat(spectate): add admin spectate functionality with auth check
- Add new translation strings for unauthorized admin spectate attempt
- Implement session check and admin validation for spectating games
- Redirect unauthorized users with appropriate error message

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -115,6 +115,7 @@
   "log_game_terminated_by_admin_default": "Game terminated by administrator {{admin}}.",
   "log_game_terminated_by_admin_with_reason": "Game terminated by administrator {{admin}}. Reason: {{reason}}",
   "text_administrator": "Administrator",
+  "error_admin_spectate_unauthorized": "Only authorized administrators can spectate games. Please log in as an administrator.",
 
   "ach_first_game_name": "Rookie",
   "ach_first_game_desc": "Complete your first game.",
