feat(leaderboard): add public leaderboard with rating, wins and win streak tabs
- Create new public routes for leaderboard data
- Add leaderboard UI with tab navigation
- Implement leaderboard fetching and display logic
- Add translations for leaderboard in both English and Ukrainian

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -116,6 +116,14 @@
   "log_game_terminated_by_admin_with_reason": "Game terminated by administrator {{admin}}. Reason: {{reason}}",
   "text_administrator": "Administrator",
   "error_admin_spectate_unauthorized": "Only authorized administrators can spectate games. Please log in as an administrator.",
+  "leaderboard_button": "🏆 Leaderboards",
+  "leaderboard_modal_title": "Leaderboards",
+  "leaderboard_tab_rating": "By Rating",
+  "leaderboard_tab_wins": "By Wins",
+  "leaderboard_tab_win_streak": "By Win Streak",
+  "loading_leaderboards": "Loading...",
+  "leaderboard_empty": "Nothing to see here yet.",
+  "error_loading_leaderboards": "Failed to load leaderboards.",
 
   "ach_first_game_name": "Rookie",
   "ach_first_game_desc": "Complete your first game.",
