--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -116,6 +116,14 @@
   "log_game_terminated_by_admin_with_reason": "Гра завершена адміністратором {{admin}}. Причина: {{reason}}",
   "text_administrator": "Адміністратор",
   "error_admin_spectate_unauthorized": "Тільки авторизовані адміністратори можуть спостерігати за іграми. Будь ласка, увійдіть як адміністратор.",
+  "leaderboard_button": "🏆 Лідерборди",
+  "leaderboard_modal_title": "Лідерборди",
+  "leaderboard_tab_rating": "За Рейтингом",
+  "leaderboard_tab_wins": "За Перемогами",
+  "leaderboard_tab_win_streak": "За Серією Перемог",
+  "loading_leaderboards": "Завантаження...",
+  "leaderboard_empty": "Тут поки що порожньо.",
+  "error_loading_leaderboards": "Не вдалося завантажити лідерборди.",
 
   "ach_first_game_name": "Новачок",
   "ach_first_game_desc": "Зіграти свою першу гру до кінця.",
