feat(system): implement maintenance mode and custom error pages - Added API endpoints for administrators (/api/admin/maintenance/...) to enable, disable, and schedule maintenance with custom messages and timers. - Implemented a server-wide middleware to intercept requests and redirect users to a maintenance page when the mode is active. - Integrated Socket.IO events (maintenanceWarning, maintenanceCancelled) to notify online players in real-time with a countdown banner. - Blocked new game creation and joining when maintenance is scheduled. - Created a universal, dynamically populated error.html page with animated backgrounds for handling 404, 500, and other errors. - Implemented server-side handlers in server.js to catch errors and redirect to the custom error page.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -124,6 +124,8 @@
   "loading_leaderboards": "Loading...",
   "leaderboard_empty": "Nothing to see here yet.",
   "error_loading_leaderboards": "Failed to load leaderboards.",
+  "error_maintenance_mode": "The server is temporarily down for maintenance. Please try again later.",
+  "error_maintenance_scheduled": "Maintenance is scheduled. Creating new games is temporarily unavailable.",
 
   "ach_first_game_name": "Rookie",
   "ach_first_game_desc": "Complete your first game.",
