feat(friends): implement friends system with requests and management
- Add friends table and triggers in both SQLite and PostgreSQL
- Create friends routes and database operations
- Implement frontend UI with tabs for friends list, requests and search
- Add real-time notifications using sockets
- Include localization for Ukrainian and English
- Style friends modal and user lists
- Add rating display for friends

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -126,6 +126,32 @@
   "error_loading_leaderboards": "Failed to load leaderboards.",
   "error_maintenance_mode": "The server is temporarily down for maintenance. Please try again later.",
   "error_maintenance_scheduled": "Maintenance is scheduled. Creating new games is temporarily unavailable.",
+  "friends_button": "Friends",
+  "friends_button_text": "Friends",
+  "friends_modal_title": "Friends",
+  "friends_tab_friends": "My Friends",
+  "friends_tab_incoming": "Incoming Requests",
+  "friends_tab_outgoing": "Outgoing Requests",
+  "friends_tab_add": "Find Friends",
+  "friends_list_empty": "You have no friends yet. Find them on the 'Find Friends' tab!",
+  "friends_incoming_empty": "No incoming requests.",
+  "friends_outgoing_empty": "No outgoing requests.",
+  "friends_search_placeholder": "Enter player's nickname...",
+  "friends_search_button": "Search",
+  "friends_search_short_query": "Enter at least 2 characters to search.",
+  "friends_search_searching": "Searching...",
+  "friends_search_no_results": "No players found.",
+  "friends_search_error": "Search error. Please try again later.",
+  "friends_remove_tooltip": "Remove from friends",
+  "friends_accept_tooltip": "Accept request",
+  "friends_reject_tooltip": "Decline request",
+  "friends_cancel_tooltip": "Cancel request",
+  "friends_add_tooltip": "Send friend request",
+  "toast_friend_request_received": "sent you a friend request!",
+  "toast_friend_request_accepted": "accepted your friend request!",
+  "friends_confirm_remove": "Are you sure you want to remove {{nickname}} from your friends list?",
+  "friends_confirm_reject": "Are you sure you want to decline the friend request from {{nickname}}?",
+  "rating_label": "Rating",
 
   "ach_first_game_name": "Rookie",
   "ach_first_game_desc": "Complete your first game.",
