--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -126,6 +126,32 @@
   "error_loading_leaderboards": "Не вдалося завантажити лідерборди.",
   "error_maintenance_mode": "Сервер тимчасово на технічному обслуговуванні. Спробуйте пізніше.",
   "error_maintenance_scheduled": "Заплановано технічні роботи. Створення нових ігор тимчасово недоступне.",
+  "friends_button": "Друзі",
+  "friends_button_text": "Друзі",
+  "friends_modal_title": "Друзі",
+  "friends_tab_friends": "Мої друзі",
+  "friends_tab_incoming": "Вхідні запити",
+  "friends_tab_outgoing": "Вихідні запити",
+  "friends_tab_add": "Знайти друзів",
+  "friends_list_empty": "У вас поки немає друзів. Знайдіть їх на вкладці 'Знайти друзів'!",
+  "friends_incoming_empty": "Немає вхідних запитів.",
+  "friends_outgoing_empty": "Немає вихідних запитів.",
+  "friends_search_placeholder": "Введіть нікнейм гравця...",
+  "friends_search_button": "Пошук",
+  "friends_search_short_query": "Введіть мінімум 2 символи для пошуку.",
+  "friends_search_searching": "Пошук...",
+  "friends_search_no_results": "Гравців не знайдено.",
+  "friends_search_error": "Помилка пошуку. Спробуйте пізніше.",
+  "friends_remove_tooltip": "Видалити з друзів",
+  "friends_accept_tooltip": "Прийняти запит",
+  "friends_reject_tooltip": "Відхилити запит",
+  "friends_cancel_tooltip": "Скасувати запит",
+  "friends_add_tooltip": "Надіслати запит на дружбу",
+  "toast_friend_request_received": "надіслав(ла) вам запит у друзі!",
+  "toast_friend_request_accepted": "прийняв(ла) ваш запит у друзі!",
+  "friends_confirm_remove": "Ви впевнені, що хочете видалити {{nickname}} зі списку друзів?",
+  "friends_confirm_reject": "Ви впевнені, що хочете відхилити запит на дружбу від {{nickname}}?",
+  "rating_label": "Рейтинг",
 
   "ach_first_game_name": "Новачок",
   "ach_first_game_desc": "Зіграти свою першу гру до кінця.",
