feat(notifications): implement web push for game invites - Integrated web-push library on the backend to send VAPID-secured notifications. - Created a `notificationService` to handle the logic of sending pushes. - Added a `push_subscriptions` table (Postgres/SQLite) to store user subscriptions. - Implemented API endpoints for subscribing/unsubscribing and fetching the VAPID key. - Developed a Service Worker (`sw.js`) on the frontend to receive and display push notifications. - Added a UI on the settings page for users to manage their push notification subscription. - The game invitation logic now sends a push notification to offline or inactive users. - Refactored client-side state management for `gameId` to ensure invites are sent only from active lobbies.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -159,6 +159,17 @@
   "invite_text": "Player <strong>{{username}}</strong> invites you to join!",
   "invite_accept_btn": "Accept",
   "invite_decline_btn": "Decline",
+  "settings_notifications_title": "Notifications",
+  "settings_notifications_description": "Receive game invitations, even when the site is not open.",
+  "notifications_not_supported": "Notifications not supported",
+  "notifications_blocked_btn": "Notifications Blocked",
+  "notifications_blocked_status": "You have blocked notifications. To enable them, change the settings in your browser.",
+  "notifications_enable_btn": "Enable Notifications",
+  "notifications_disable_btn": "Disable Notifications",
+  "notifications_enabled_status": "You will receive game invitations.",
+  "notifications_disabled_status": "Notifications are disabled.",
+  "push_invite_title": "Invitation to 'Durak' game!",
+  "push_invite_body": "Player {{username}} is calling you to the table!",
 
   "ach_first_game_name": "Rookie",
   "ach_first_game_desc": "Complete your first game.",
