--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -159,6 +159,17 @@
   "invite_text": "Гравець <strong>{{username}}</strong> запрошує вас приєднатися!",
   "invite_accept_btn": "Прийняти",
   "invite_decline_btn": "Відхилити",
+  "settings_notifications_title": "Сповіщення",
+  "settings_notifications_description": "Отримуйте сповіщення про запрошення в гру, навіть коли сайт не відкритий.",
+  "notifications_not_supported": "Сповіщення не підтримуються",
+  "notifications_blocked_btn": "Сповіщення заблоковано",
+  "notifications_blocked_status": "Ви заблокували сповіщення. Щоб їх увімкнути, змініть налаштування у вашому браузері.",
+  "notifications_enable_btn": "Увімкнути сповіщення",
+  "notifications_disable_btn": "Вимкнути сповіщення",
+  "notifications_enabled_status": "Ви отримуватимете запрошення в гру.",
+  "notifications_disabled_status": "Сповіщення вимкнено.",
+  "push_invite_title": "Запрошення в гру 'Дурень'!",
+  "push_invite_body": "Гравець {{username}} кличе вас до столу!",
 
   "ach_first_game_name": "Новачок",
   "ach_first_game_desc": "Зіграти свою першу гру до кінця.",
