feat(economy): implement in-game currency and betting system - Added `coins` and `last_daily_bonus_claim` columns to the `users` table, ensuring robust schema updates for both SQLite and PostgreSQL. - Implemented a daily bonus system to reward active players. - Users now have a coin balance displayed in their profile, which is updated in real-time. - Added UI on the main screen to create games with custom bets (using an input field instead of a fixed list). - The server validates if players have enough coins to create or join a betting game. - Refactored the post-game stats update logic to be database-agnostic (`async/await` with transactions), fixing a critical bug on PostgreSQL. - Prevented users from joining a game they are already in.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -170,6 +170,16 @@
   "notifications_disabled_status": "Notifications are disabled.",
   "push_invite_title": "Invitation to 'Durak' game!",
   "push_invite_body": "Player {{username}} is calling you to the table!",
+  "profile_coins": "💰 Coins:",
+  "toast_daily_bonus": "You received a daily bonus: +{{amount}} coins! ✨",
+  "bet_toggle_label": "Game with bets",
+  "bet_amount_label": "Bet amount (coins):",
+  "error_not_enough_coins": "You don't have enough coins for that bet!",
+  "error_not_enough_coins_host": "You don't have enough coins to create a game with that bet.",
+  "error_not_enough_coins_join": "You don't have enough coins to join this game.",
+  "error_guests_cannot_bet": "Guests cannot bet. Please log in or register.",
+  "error_already_in_game": "You are already in this game.",
+  "error_invalid_bet_amount": "Неприпустима сума ставки. Мінімальна ставка: {{min}} монет.",
 
   "ach_first_game_name": "Rookie",
   "ach_first_game_desc": "Complete your first game.",
