--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -170,6 +170,16 @@
   "notifications_disabled_status": "Сповіщення вимкнено.",
   "push_invite_title": "Запрошення в гру 'Дурень'!",
   "push_invite_body": "Гравець {{username}} кличе вас до столу!",
+  "profile_coins": "💰 Монет:",
+  "toast_daily_bonus": "Ви отримали щоденний бонус: +{{amount}} монет! ✨",
+  "bet_toggle_label": "Гра на ставки",
+  "bet_amount_label": "Розмір ставки (монет):",
+  "error_not_enough_coins": "У вас недостатньо монет для такої ставки!",
+  "error_not_enough_coins_host": "У вас недостатньо монет, щоб створити гру з такою ставкою.",
+  "error_not_enough_coins_join": "У вас недостатньо монет, щоб приєднатися до цієї гри.",
+  "error_guests_cannot_bet": "Гості не можуть грати на ставки. Будь ласка, увійдіть або зареєструйтеся.",
+  "error_already_in_game": "Ви вже перебуваєте в цій грі.",
+  "error_invalid_bet_amount": "Invalid bet amount. Minimum bet is {{min}} coins.",
 
   "ach_first_game_name": "Новачок",
   "ach_first_game_desc": "Зіграти свою першу гру до кінця.",
