fix(economy): add bet transactions and handle edge cases - Improved the betting system to be fully transactional and robust. - Bets are now deducted from all players' balances when a game starts. - The total prize pool is awarded to the winner(s) in the post-game stats update. - If deducting bets fails for any reason, the game is now automatically cancelled to prevent unfair play. - If a betting game concludes without a winner (e.g., all players leave), bets are now refunded to all participants. - Fixed a logical bug that allowed a user to join a game they were already in.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -180,6 +180,8 @@
   "error_guests_cannot_bet": "Guests cannot bet. Please log in or register.",
   "error_already_in_game": "You are already in this game.",
   "error_invalid_bet_amount": "Неприпустима сума ставки. Мінімальна ставка: {{min}} монет.",
+  "error_bet_deduction_failed": "Error! Failed to deduct bets. The game has been cancelled.",
+  "info_bet_refunded": "ℹ️ Your bet has been refunded as the game ended without a winner.",
 
   "ach_first_game_name": "Rookie",
   "ach_first_game_desc": "Complete your first game.",
