feat(roulette): implement full MVP of roulette minigame - Adds a complete, playable European roulette minigame to the hub. - Created a real-time game loop on the server using Socket.IO to manage game phases (betting, spinning, results). - Implemented logic for placing bets, deducting coins from user balances, and calculating/awarding payouts. - Added support for simple bets (color, even/odd) and bets on individual numbers (0-36) with a 36x payout - Created a new `/roulette` page with a dedicated UI. - Developed a fully responsive and adaptive betting table that works on both desktop and mobile devices. - The UI displays the game timer, winning number history, and user's current bets. - Implemented real-time feedback for players, including win/loss notifications and balance updates.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -182,6 +182,33 @@
   "error_invalid_bet_amount": "Неприпустима сума ставки. Мінімальна ставка: {{min}} монет.",
   "error_bet_deduction_failed": "Error! Failed to deduct bets. The game has been cancelled.",
   "info_bet_refunded": "ℹ️ Your bet has been refunded as the game ended without a winner.",
+  "roulette_page_title": "Roulette",
+  "roulette_title": "Roulette",
+  "roulette_button_text": "🎰 Roulette",
+  "roulette_timer_betting": "Place your bets:",
+  "roulette_timer_spinning": "No more bets!",
+  "roulette_timer_results": "New round in:",
+  "roulette_history_label": "History:",
+  "bet_amount_label": "Bet Amount:",
+  "bet_max_button": "MAX",
+  "bet_option_red": "Red",
+  "bet_option_black": "Black",
+  "bet_option_even": "Even",
+  "bet_option_odd": "Odd",
+  "my_bets_title": "Your Bets This Round:",
+  "roulette_error_invalid_amount": "Please enter a valid bet amount!",
+  "roulette_info_bet_placed": "Bet placed...",
+  "roulette_info_bet_accepted": "Your bet has been accepted!",
+  "roulette_error_bets_closed": "Bets are no longer accepted for this round.",
+  "roulette_error_invalid_bet": "Invalid bet.",
+  "bet_type_color": "Color: {{value}}",
+  "bet_type_even-odd": "{{value}}",
+  "coins_label": "coins",
+  "roulette_win_toast": "🎉 You won: {{amount}} coins! 🎉",
+  "roulette_net_win_toast": "Net win: +{{amount}} coins! 🥳",
+  "roulette_net_loss_toast": "You lost: -{{amount}} coins. 😥",
+  "roulette_net_draw_toast": "Your bets broke even.",
+  "bet_type_number": "Number",
 
   "ach_first_game_name": "Rookie",
   "ach_first_game_desc": "Complete your first game.",
