--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -173,7 +173,6 @@
   "profile_coins": "💰 Монет:",
   "toast_daily_bonus": "Ви отримали щоденний бонус: +{{amount}} монет! ✨",
   "bet_toggle_label": "Гра на ставки",
-  "bet_amount_label": "Розмір ставки (монет):",
   "error_not_enough_coins": "У вас недостатньо монет для такої ставки!",
   "error_not_enough_coins_host": "У вас недостатньо монет, щоб створити гру з такою ставкою.",
   "error_not_enough_coins_join": "У вас недостатньо монет, щоб приєднатися до цієї гри.",
@@ -182,6 +181,33 @@
   "error_invalid_bet_amount": "Invalid bet amount. Minimum bet is {{min}} coins.",
   "error_bet_deduction_failed": "Помилка! Не вдалося списати ставки. Гру скасовано.",
   "info_bet_refunded": "ℹ️ Вашу ставку було повернуто, оскільки гра завершилася без переможця.",
+  "roulette_page_title": "Рулетка",
+  "roulette_title": "Рулетка",
+  "roulette_button_text": "🎰 Рулетка",
+  "roulette_timer_betting": "Прийом ставок:",
+  "roulette_timer_spinning": "Ставок більше немає!",
+  "roulette_timer_results": "Новий раунд через:",
+  "roulette_history_label": "Історія:",
+  "bet_amount_label": "Сума ставки:",
+  "bet_max_button": "МАКС",
+  "bet_option_red": "Червоне",
+  "bet_option_black": "Чорне",
+  "bet_option_even": "Парне",
+  "bet_option_odd": "Непарне",
+  "my_bets_title": "Ваші ставки в цьому раунді:",
+  "roulette_error_invalid_amount": "Введіть коректну суму ставки!",
+  "roulette_info_place_bet": "Оберіть, на що поставити",
+  "roulette_info_bet_placed": "Ставку надіслано...",
+  "roulette_info_bet_accepted": "Вашу ставку прийнято!",
+  "roulette_error_bets_closed": "Ставки більше не приймаються в цьому раунді.",
+  "roulette_error_invalid_bet": "Некоректна ставка.",
+  "bet_type_color_simple": "Колір",
+  "coins_label": "монет",
+  "roulette_win_toast": "🎉 Ваш виграш: {{amount}} монет! 🎉",
+  "roulette_net_win_toast": "Чистий виграш: +{{amount}} монет! 🥳",
+  "roulette_net_loss_toast": "Ви програли: -{{amount}} монет. 😥",
+  "roulette_net_draw_toast": "Ваші ставки зіграли в нуль.",
+  "bet_type_number": "Число",
 
   "ach_first_game_name": "Новачок",
   "ach_first_game_desc": "Зіграти свою першу гру до кінця.",
