Major Update v2.1: JWT Auth, Telegram, i18n & Fixes
- Core Auth: Migrated from Express Sessions to JWT (HttpOnly Cookies).
- Telegram Integration:
  - Mini App Auto-login (seamless auth via initData).
  - Browser Widget Login support.
  - Account Linking/Unlinking with 'Smart Merge'.
- Localization:
  - Added Russian language support (RU).
  - Extended translations for all modules.
- Security & Quality:
  - Strict Ban System (filtered from leaderboards/friends).
  - Fixed CORS & Proxy issues.
  - Fixed ESLint errors & code cleanup.
- UI/UX:
  - Responsive GameView (Mobile-first Grid).
  - Card Fan animations & Hand scroll.
  - Toast notifications replaced system alerts.
- Infrastructure:
  - PWA support added.
  - Database migrations for Telegram ID.

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -82,6 +82,7 @@
   "roulette_button": "Roulette",
   "lang_uk": "Ukrainian",
   "lang_en": "English",
+  "lang_ru": "Russian",
   "logout_title": "Logout",
   "confirm_logout": "Log out?",
   "leaderboard_title": "🏆 Leaderboards",
@@ -142,5 +143,40 @@
   "prompt_track_title": "Track title:",
   "default_music_title": "Music",
   "default_offer_title": "Offer",
-  "sent_to_host": "Sent to host!"
+  "sent_to_host": "Sent to host!",
+  "verified_label": "Verified",
+  "default_guest_name": "Player",
+  "roulette_error_invalid_bet": "Invalid bet",
+  "maintenance_title": "Maintenance in progress",
+  "maintenance_eta_label": "ETA:",
+  "maintenance_default_message": "We are upgrading servers to make the game even better! Please come back later.",
+  "maintenance_complete_soon": "Completing soon!",
+  "hello_username": "Hello, {username}!",
+  "open_in_telegram": "Open the game in Telegram!",
+  "telegram_data_unavailable": "Telegram data unavailable! Try restarting the app.",
+  "telegram_linked_title": "Account linked",
+  "telegram_linked_info": "You can log into this account via Telegram",
+  "unlink_button": "Unlink",
+  "link_current_telegram": "Link this Telegram to {username}",
+  "or_label": "Or",
+  "login_other_and_link": "Log into another account and link",
+  "open_via_telegram_hint": "To link the account, open the game via the Telegram app.",
+  "confirm_unlink_title": "Unlink Telegram?",
+  "confirm_unlink_message": "Are you sure? You will no longer be able to log into this account via Telegram.",
+  "confirm_unlink": "Yes, unlink",
+  "telegram_unlinked": "Telegram unlinked.",
+  "error_unauthorized": "Unauthorized. Please log in.",
+  "error_generic": "Error",
+  "connection_error": "Connection error",
+  "friends_request_sent": "Request sent!",
+  "friends_request_accepted": "Request accepted!",
+  "friends_deleted": "Deleted.",
+  "friends_invite_sent": "Invitation sent!",
+  "friends_invitation_title": "Invitation",
+  "friends_invitation_text": "Player {username} invites you to a game.",
+  "ban_title": "Account Banned",
+  "ban_access_restricted": "Access to the game is restricted.",
+  "ban_reason_label": "Reason:",
+  "ban_default_reason": "Violation of game rules",
+  "ban_acknowledge_exit": "Got it (Exit)"
 }
