--- a/client/src/locales/uk.json
+++ b/client/src/locales/uk.json
@@ -82,6 +82,7 @@
   "roulette_button": "Рулетка",
   "lang_uk": "Українська",
   "lang_en": "English",
+  "lang_ru": "Русский",
   "logout_title": "Вийти",
   "confirm_logout": "Вийти з акаунту?",
   "leaderboard_title": "🏆 Лідерборди",
@@ -138,9 +139,43 @@
   "friends_nothing_found": "Нічого не знайдено",
   "friends_already_friend": "Вже друг",
   "friends_add": "Додати",
+  "friends_request_sent": "Запит надіслано!",
+  "friends_request_accepted": "Заявку прийнято!",
+  "friends_deleted": "Видалено.",
   "game_invalid_link": "Невірне посилання!",
   "prompt_track_title": "Назва треку:",
   "default_music_title": "Музика",
   "default_offer_title": "Пропозиція",
-  "sent_to_host": "Надіслано хосту!"
+  "sent_to_host": "Надіслано хосту!",
+  "verified_label": "Верифіковано",
+  "default_guest_name": "Гравець",
+  "roulette_error_invalid_bet": "Невірна ставка",
+  "maintenance_title": "Ведуться технічні роботи",
+  "maintenance_eta_label": "Орієнтовно:",
+  "maintenance_default_message": "Ми оновлюємо сервери, щоб гра стала ще кращою! Будь ласка, зайдіть трохи пізніше.",
+  "maintenance_complete_soon": "Скоро завершимо!",
+  "hello_username": "Привіт, {username}!",
+  "open_in_telegram": "Відкрийте гру в Telegram!",
+  "telegram_linked_title": "Акаунт прив'язано",
+  "telegram_linked_info": "Ви можете входити в цей акаунт через Telegram",
+  "unlink_button": "Відв'язати",
+  "link_current_telegram": "Прив'язати цей Telegram до {username}",
+  "or_label": "Або",
+  "login_other_and_link": "Увійти в інший акаунт та прив'язати",
+  "open_via_telegram_hint": "Щоб прив'язати акаунт, відкрийте гру через додаток Telegram.",
+  "confirm_unlink_title": "Відв'язати Telegram?",
+  "confirm_unlink_message": "Ви впевнені? Ви більше не зможете входити в цей акаунт через Telegram.",
+  "confirm_unlink": "Так, відв'язати",
+  "telegram_unlinked": "Telegram відв'язано.",
+  "error_unauthorized": "Не авторизовано. Увійдіть в акаунт.",
+  "error_generic": "Помилка",
+  "connection_error": "Помилка з'єднання",
+  "friends_invite_sent": "Запрошення надіслано!",
+  "friends_invitation_title": "Запрошення",
+  "friends_invitation_text": "Гравець {username} кличе вас у гру.",
+  "ban_title": "Акаунт заблоковано",
+  "ban_access_restricted": "Доступ до гри обмежено.",
+  "ban_reason_label": "Причина:",
+  "ban_default_reason": "Порушення правил гри",
+  "ban_acknowledge_exit": "Зрозуміло (Вийти)"
 }
