Major Update v2.2.0: Bot Ecosystem, Social Hub & Stars Economy
- Telegram Bot Features:
  - Advanced Profile: View stats, change nickname, and manage password directly in-bot.
  - Security First:
    - Auto-deletion of sensitive messages (passwords).
    - "Old Password" verification flow.
    - Account status detection (Full vs Telegram-only).
  - Social System: View friends list, handle incoming requests (Accept/Decline) via UI.
  - Leaderboards: Interactive Top-10 rankings (switchable by Rating/Wins).

- Web Platform Features:
  - Settings: Added ability to change password directly via website UI.
  - API: New endpoint `/change-password` with security validation.

- Economy & Monetization:
  - Telegram Stars (XTR): Native integration for donations.
  - Payments: Automatic invoice generation and database tracking.
  - Validation: Smart limits to prevent API errors (Max 2500 Stars).

- Localization (i18n):
  - Full translation support for Bot Profile, Friends, Leaderboards, and Donations (UK, RU, EN).

- Infrastructure & Fixes:
  - TWA/Web App: Fixed `telegram-web-app.js` missing script (solved auto-login).
  - Database: Added `donations` schema (SQLite/Postgres).
  - Bug Fixes:
    - Resolved `REPLY_MARKUP_BUY_EMPTY` in invoices.
    - Fixed `CURRENCY_TOTAL_AMOUNT_INVALID` limits.
    - Fixed `BUTTON_TYPE_INVALID` in Inline Mode.
    - Fixed JWT middleware crash on undefined hostname.

--- a/client/src/locales/uk.json
+++ b/client/src/locales/uk.json
@@ -62,6 +62,14 @@
   "settings_style_saved": "Стиль збережено!",
   "settings_save_error": "Помилка збереження",
   "settings_connection_error": "Помилка з'єднання",
+  "password_change_title": "Зміна пароля",
+  "current_password_label": "Поточний пароль",
+  "new_password_label": "Новий пароль",
+  "confirm_password_label": "Підтвердіть новий пароль",
+  "password_change_submit": "Змінити пароль",
+  "password_change_success": "Пароль успішно змінено",
+  "password_too_short": "Пароль надто короткий (мін. {min})",
+  "passwords_mismatch": "Паролі не співпадають",
   "go_home": "На головну",
   "room_label": "Кімната",
   "enter_name_to_join": "Введіть ім'я для входу:",
