--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -62,6 +62,14 @@
   "settings_style_saved": "Style saved!",
   "settings_save_error": "Save error",
   "settings_connection_error": "Connection error",
+  "password_change_title": "Change Password",
+  "current_password_label": "Current password",
+  "new_password_label": "New password",
+  "confirm_password_label": "Confirm new password",
+  "password_change_submit": "Change password",
+  "password_change_success": "Password changed successfully",
+  "password_too_short": "Password too short (min {min})",
+  "passwords_mismatch": "Passwords do not match",
   "go_home": "Home",
   "room_label": "Room",
   "enter_name_to_join": "Enter name to join:",
