--- a/client/src/locales/ru.json
+++ b/client/src/locales/ru.json
@@ -62,6 +62,14 @@
   "settings_style_saved": "Стиль сохранен!",
   "settings_save_error": "Ошибка сохранения",
   "settings_connection_error": "Ошибка соединения",
+  "password_change_title": "Смена пароля",
+  "current_password_label": "Текущий пароль",
+  "new_password_label": "Новый пароль",
+  "confirm_password_label": "Повторите новый пароль",
+  "password_change_submit": "Изменить пароль",
+  "password_change_success": "Пароль успешно изменён",
+  "password_too_short": "Пароль слишком короткий (мин. {min})",
+  "passwords_mismatch": "Пароли не совпадают",
   "go_home": "На главную",
   "room_label": "Комната",
   "enter_name_to_join": "Введите имя для входа:",
