Core Fixes: Game status logic, disconnect handling & win condition (v3.0.0-alpha.2)

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -77,7 +77,7 @@
   "invite_button": "Invite",
   "tooltip_add_friend": "Add friend",
   "tooltip_host": "Host",
-  "waiting_for_host": "Waiting for host...",
+  "waiting_for_host": "Waiting for host to start...",
   "start_game_button": "Start game",
   "status_waiting": "Waiting...",
   "status_opponent_turn": "Opponent's turn",
@@ -186,5 +186,25 @@
   "ban_access_restricted": "Access to the game is restricted.",
   "ban_reason_label": "Reason:",
   "ban_default_reason": "Violation of game rules",
-  "ban_acknowledge_exit": "Got it (Exit)"
+  "ban_acknowledge_exit": "Got it (Exit)",
+  "quick_play_button": "Quick Play",
+  "lobby_browser_button": "Lobby Browser",
+  "find_game": "Find Game",
+  "create_game": "Create Game",
+  "lobby_list_public": "Public Lobbies",
+  "no_public_lobbies": "No open lobbies atm. Create one!",
+  "join_private_lobby": "Join via Code",
+  "enter_code_placeholder": "Invite code...",
+  "lobby_type": "Lobby Type",
+  "lobby_public": "Public",
+  "lobby_private": "Private",
+  "create_lobby_button": "Create Lobby",
+  "leave_lobby": "Leave Lobby",
+  "error_not_in_lobby": "You are not in this lobby.",
+  "you_were_kicked": "You were kicked from the lobby.",
+  "searching_for_game": "Searching for available game",
+  "back_to_main_menu": "Back to Menu",
+  "loading": "Loading...",
+  "refresh_list": "Refresh list",
+  "error_lobby_not_found": "Lobby not found or game already started."
 }
