--- a/client/src/locales/ru.json
+++ b/client/src/locales/ru.json
@@ -77,7 +77,7 @@
   "invite_button": "Пригласить",
   "tooltip_add_friend": "Добавить в друзья",
   "tooltip_host": "Хост",
-  "waiting_for_host": "Ожидание хоста...",
+  "waiting_for_host": "Ждем, пока хост начнет игру...",
   "start_game_button": "Начать игру",
   "status_waiting": "Ожидание...",
   "status_opponent_turn": "Ход соперника",
@@ -185,5 +185,25 @@
   "ban_access_restricted": "Доступ к игре ограничен.",
   "ban_reason_label": "Причина:",
   "ban_default_reason": "Нарушение правил игры",
-  "ban_acknowledge_exit": "Понятно (Выйти)"
+  "ban_acknowledge_exit": "Понятно (Выйти)",
+  "quick_play_button": "Быстрая игра",
+  "lobby_browser_button": "Найти лобби",
+  "find_game": "Найти игру",
+  "create_game": "Создать игру",
+  "lobby_list_public": "Публичные игры",
+  "no_public_lobbies": "Сейчас нет открытых игр. Создайте свою!",
+  "join_private_lobby": "Войти по коду",
+  "enter_code_placeholder": "Код приглашения...",
+  "lobby_type": "Тип лобби",
+  "lobby_public": "Открытое",
+  "lobby_private": "Приватное",
+  "create_lobby_button": "Создать лобби",
+  "leave_lobby": "Покинуть лобби",
+  "error_not_in_lobby": "Вы не являетесь участником этого лобби.",
+  "you_were_kicked": "Вас исключили из лобби.",
+  "searching_for_game": "Поиск доступной игры",
+  "back_to_main_menu": "На главную",
+  "loading": "Загрузка...",
+  "refresh_list": "Обновить список",
+  "error_lobby_not_found": "Лобби не найдено или игра уже началась."
 }
