--- a/client/src/locales/uk.json
+++ b/client/src/locales/uk.json
@@ -77,7 +77,7 @@
   "invite_button": "Запросити",
   "tooltip_add_friend": "Додати в друзі",
   "tooltip_host": "Хост",
-  "waiting_for_host": "Очікуємо хоста...",
+  "waiting_for_host": "Очікуємо, поки хост почне гру...",
   "start_game_button": "Почати гру",
   "status_waiting": "Чекаємо...",
   "status_opponent_turn": "Хід суперника",
@@ -185,5 +185,25 @@
   "ban_access_restricted": "Доступ до гри обмежено.",
   "ban_reason_label": "Причина:",
   "ban_default_reason": "Порушення правил гри",
-  "ban_acknowledge_exit": "Зрозуміло (Вийти)"
+  "ban_acknowledge_exit": "Зрозуміло (Вийти)",
+  "quick_play_button": "Швидка гра",
+  "lobby_browser_button": "Знайти лобі",
+  "find_game": "Знайти гру",
+  "create_game": "Створити гру",
+  "lobby_list_public": "Публічні ігри",
+  "no_public_lobbies": "Наразі немає відкритих ігор. Створіть свою!",
+  "join_private_lobby": "Увійти за кодом",
+  "enter_code_placeholder": "Код запрошення...",
+  "lobby_type": "Тип лобі",
+  "lobby_public": "Відкрите",
+  "lobby_private": "Приватне",
+  "create_lobby_button": "Створити лобі",
+  "leave_lobby": "Покинути лобі",
+  "error_not_in_lobby": "Ви не є учасником цього лобі.",
+  "you_were_kicked": "Вас виключили з лобі.",
+  "searching_for_game": "Пошук доступної гри",
+  "back_to_main_menu": "На головну",
+  "loading": "Завантаження...",
+  "refresh_list": "Оновити список",
+  "error_lobby_not_found": "Лобі не знайдено або гра вже почалася."
 }
